--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ core
 /.DS_Store
 Builds
 user.mk
+.vscode/settings.json
+.vscode/extensions.json
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.pio/build/project.checksum
