--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ user.mk
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .pio/build/project.checksum
+.pio/build/attiny4313/.sconsign.dblite
+.pio/build/attiny4313/firmware.elf
+.pio/build/attiny4313/firmware.hex
+.pio/build/attiny4313/src/dbg_putchar.o
+.pio/build/attiny4313/src/main.o
+.pio/build/attiny4313/src/usiTwiSlave.o
