--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,11 @@ board_build.f_cpu = 16000000L
 upload_protocol = arduino
 upload_speed = 19200
 build_flags = -Os
+
+[env:attiny2313]
+platform = atmelavr
+board = attiny2313
+board_build.f_cpu = 16000000L
+upload_protocol = arduino
+upload_speed = 19200
+build_flags = -Os
