--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,3 @@
-Debug
-Release
-/.project
-core
-.settings
-/.cproject
 /.DS_Store
-Builds
-user.mk
-.vscode/settings.json
-.vscode/extensions.json
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.pio/build/project.checksum
-.pio/build/attiny4313/.sconsign.dblite
-.pio/build/attiny4313/firmware.elf
-.pio/build/attiny4313/firmware.hex
-.pio/build/attiny4313/src/dbg_putchar.o
-.pio/build/attiny4313/src/main.o
-.pio/build/attiny4313/src/usiTwiSlave.o
-.pio/build/.sconsign3.dblite
+.vscode
+.pio/build
