--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,10 @@ board_build.f_cpu = 16000000L
 upload_protocol = arduino
 upload_speed = 19200
 build_flags = -Os
+upload_flags = -v
+board_fuses.hfuse = 0xDF
+board_fuses.lfuse = 0x7F
+board_fuses.efuse = 0xFF
 
 [env:attiny4313]
 platform = atmelavr
