--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ upload_speed = 19200
 build_flags = -Os
 upload_flags = -v
 board_fuses.hfuse = 0xDF
-board_fuses.lfuse = 0x7F
+board_fuses.lfuse = 0xFF
 board_fuses.efuse = 0xFF
 
 [env:attiny4313]
