--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,6 @@ board_build.f_cpu = 16000000L
 upload_protocol = arduino
 upload_speed = 19200
 build_flags = -Os
-
+board_fuses.hfuse = 0xDF
+board_fuses.lfuse = 0xFF
+board_fuses.efuse = 0xFF
